# njoritus

./: .clang-tidy  .gitignore  .gitmessage  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: build.yml  linting.yml  pre-commit.yml  tests.yml
cmake/: apr.cmake  apr_config.cmake  check_c_compiler_version.cmake  clang_tidy_verifier.cmake  config.cmake  external_projects.cmake  linting.cmake  odin-gaze.cmake  secret-manipulate.cmake  telebot.cmake  thor-shield.cmake
docker/: njoritus.Dockerfile
docker/scripts/: clang-tidy14_install.sh  cmake_install.sh  entrypoint.sh
external_projects/: .clang-tidy
include/njoritus/: bot.h  callbacks.h  core.h  query_classifier.h  query_classifier_config.h  query_types.h  regex.h  regex_wrapper.h  response_manager.h  user_interface.h
include/njoritus/response_functions/: get_response_weather.h
include/njoritus/semantic_checkers/: cordinate_checker.h
include/thor-shield/: dec.h  enc.h  mjolnir.h
include/utilities/: utilities.h
odin-gaze/: Cargo.toml
odin-gaze/src/: odin-gaze.rs
scripts/: build.sh  checks.sh  clean.sh  utilities.sh
src/: main.c
src/njoritus/: bot.c  core.c  main.c  query_classifier.c  query_classifier_config.c  regex.c  regex_wrapper.c  response_manager.c  user_interface.c
src/njoritus/response_functions/: get_response_weather.c
src/njoritus/semantic_checkers/: cordinate_checker.c
src/thor-shield/: dec.c  enc.c  main.c  mjolnir.c
src/utilities/: utilities.c
tests/: CMakeLists.txt  njoritus-test.c  odin-gaze-test.c  thor-shield-test.c
