[package]
name = "odingaze"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
geocoding = "0.4.0"
open-meteo-rs = "0.0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[lib]
name = "odingaze"
crate-type = ["cdylib"]
path = "src/odin-gaze.rs"
